# src/main/kotlin/mimsoft/io/features/checkout/CheckoutRequestDto.kt
@@ -1,0 +1,12 @@
+package mimsoft.io.features.checkout
+
+import mimsoft.io.features.address.AddressDto
+import mimsoft.io.features.order.utils.OrderWrapper
+import mimsoft.io.features.promo.PromoDto
+
+data class CheckoutRequestDto(
+    val id: Long? = null,
+    val order: OrderWrapper? = null,
+    val promo: PromoDto? = null,
+    val address: AddressDto? = null
+)
